[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/icon.png" type="Texture" id=1]
[ext_resource path="res://src/collectables/collectable.gd" type="Script" id=2]
[ext_resource path="res://assets/collectibles_smol.png" type="Texture" id=3]
[ext_resource path="res://assets/collectibles_middle.png" type="Texture" id=4]
[ext_resource path="res://assets/collectibles_large.png" type="Texture" id=5]

[sub_resource type="ShaderMaterial" id=3]

[sub_resource type="CubeMesh" id=4]
material = SubResource( 3 )

[sub_resource type="QuadMesh" id=1]
size = Vector2( 5, 5 )

[sub_resource type="SpatialMaterial" id=2]
params_billboard_mode = 1
params_grow = true
params_grow_amount = 0.0
albedo_texture = ExtResource( 1 )

[sub_resource type="BoxShape" id=12]
extents = Vector3( 0.190402, 1.75675, 1 )

[sub_resource type="BoxShape" id=13]
extents = Vector3( 0.190402, 3.12365, 1 )

[sub_resource type="BoxShape" id=14]
extents = Vector3( 0.190402, 1.75675, 1 )

[sub_resource type="Animation" id=6]
resource_name = "Idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("StaticBody:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 1, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StaticBody:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="SpatialMaterial" id=11]
albedo_color = Color( 0, 1, 0.333333, 1 )
roughness = 0.0
emission_enabled = true
emission = Color( 0.141176, 0.788235, 0.0745098, 1 )
emission_energy = 10.6
emission_operator = 1
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=10]
material = SubResource( 11 )
radius = 0.2
height = 1.0

[node name="Collectable" type="Spatial"]
script = ExtResource( 2 )

[node name="StaticBody" type="StaticBody" parent="."]
collision_layer = 2
collision_mask = 2

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
transform = Transform( 2.49872, 0, 0, 0, 2.49872, 0, 0, 0, 0.189903, 0, 0, 0 )
visible = false
mesh = SubResource( 4 )
skeleton = NodePath("../..")

[node name="Spatial2" type="MeshInstance" parent="StaticBody"]
transform = Transform( -0.985926, 0, -8.61924e-08, 0, 0.985926, 0, 8.61924e-08, 0, -0.985926, 0, 0, -0.2 )
visible = false
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = SubResource( 2 )

[node name="Area" type="Area" parent="StaticBody"]

[node name="CollisionShapeSmall" type="CollisionShape" parent="StaticBody/Area"]
transform = Transform( 1.47891, 0, 0, 0, 0.888304, 0, 0, 0, 0.18, 0, 0, 0 )
shape = SubResource( 12 )

[node name="CollisionShapeMiddle" type="CollisionShape" parent="StaticBody/Area"]
transform = Transform( 1.28758, 0, 0, 0, 0.95676, 0, 0, 0, 0.18, 0, 0, 0 )
visible = false
shape = SubResource( 13 )

[node name="CollisionShapeLarge" type="CollisionShape" parent="StaticBody/Area"]
transform = Transform( 2.90977, 0, 0, 0, 2.50269, 0, 0, 0, 0.180194, 0, 0, 0 )
visible = false
shape = SubResource( 14 )

[node name="SmallCollectable" type="Sprite3D" parent="StaticBody"]
texture = ExtResource( 3 )
hframes = 10
vframes = 7
region_enabled = true
region_rect = Rect2( 0, 150, 3000, 2100 )

[node name="MiddleCollectable" type="Sprite3D" parent="StaticBody"]
visible = false
texture = ExtResource( 4 )
hframes = 4
vframes = 2
region_enabled = true
region_rect = Rect2( 0, 150, 2400, 1200 )

[node name="LargeCollectable" type="Sprite3D" parent="StaticBody"]
visible = false
texture = ExtResource( 5 )
hframes = 4
frame = 3
region_enabled = true
region_rect = Rect2( 0, 150, 2400, 900 )

[node name="Spatial" type="MeshInstance" parent="StaticBody"]
transform = Transform( 0.985308, 0, 0, 0, 0.985308, 0, 0, 0, 0.985308, 0, 0, 0.2 )
visible = false
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
playback_speed = 0.5
anims/Idle = SubResource( 6 )
anims/RESET = SubResource( 7 )

[node name="CPUParticles" type="CPUParticles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.05323, 0 )
amount = 40
lifetime = 0.3
speed_scale = 0.15
explosiveness = 0.15
randomness = 1.0
mesh = SubResource( 10 )
emission_shape = 2
emission_box_extents = Vector3( 3, 2, 3 )
gravity = Vector3( 0, 9.8, 0 )
scale_amount = 0.1
scale_amount_random = 0.24

[connection signal="body_entered" from="StaticBody/Area" to="." method="_on_Area_body_entered"]
